[package]
name = "ignited"
version = "0.0.0"
description = "Rapid early-ramdisk system initialization, accompanying initramfs generator"
authors = ["Hugo Cuenca <hugo.cuenca.arana@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/hugo-cuenca/ignited/"
repository = "https://github.com/hugo-cuenca/ignited/"
license = "MITNFA"
keywords = ["init", "initramfs", "initrd", "ignite", "booster"]
exclude = [
    ".idea/*",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiled-uuid = "0.1.2"
crossbeam-utils = "0.8.8"
cstr = "0.2.10"
dashmap = "5.2.0"
goglob = { version = "0.2.0", features = ["serde"] }
kobject-uevent = "0.1.0"
mio = { version = "0.8.2", features = ["os-ext", "os-poll"] }
netlink-sys-mio-0-8 = { version = "0.8.3", features = ["mio_socket"] }
nix = "0.23.1"
precisej-printable-errno = "0.2.2"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.9"
uuid = "0.8.2"